Improved mobility support

--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@
         <div class="maindiv">
         <h1>News</h1>
         <p id="manualNews"></p>
+    </div>
 
         <div class="centerdiv">
             <h2>Discord Announcements</h2>
         </div>
-        <div class align="center">
+        <div class="centerdiv">
             <widgetbot
             server="152168677578506240"
             channel="152169339208990721"
@@ -62,7 +63,7 @@
         
 
         <br>
-        </div>
+        
 
         <!--<div>
             <br><br>
