improvements to navbar, logo, scrolling effects, and mobile iframes

--- a/legal.html
+++ b/legal.html
@@ -19,15 +19,15 @@
 
 <body class="LegalPage">
     <div id="navbar">
-        <img src="images/jkg-big_logo-inverted-dropshadow.png" alt="Jedi Knight Galaxies" align="right">
+        <img src="images/jkg-big_logo-inverted-dropshadow.png" class="img-fluid" alt="Jedi Knight Galaxies" align="right">
         <a href="index.html">Home</a>
         <a href="download.html">Download</a>
         <a href="about.html">About</a>
         <a href="https://jkhub.org/forum/117-jedi-knight-galaxies/">Forum</a>
     </div>
-
+    
     <div class="logo" id="logo">
-        <img src="images/jkg-big_logo-inverted-dropshadow.png" alt="Jedi Knight Galaxies" align="center">
+        <img src="images/jkg-big_logo-inverted-dropshadow.png" class="img-fluid" alt="Jedi Knight Galaxies" align="center">
     </div>
 
     <h1>Terms of Use <br>&<br> Privacy Policy</h1>
