--- a/contributors.html
+++ b/contributors.html
@@ -20,7 +20,7 @@
     </head>
     <body class="CreditsPage">
         <div id="navbar">
-            <img src="images/jkg-big_logo-inverted-dropshadow.png" alt="Jedi Knight Galaxies" align="right">
+            <img src="images/jkg-big_logo-inverted-dropshadow.png" class="img-fluid" alt="Jedi Knight Galaxies" align="right">
             <a href="index.html">Home</a>
             <a href="download.html">Download</a>
             <a href="about.html">About</a>
@@ -28,7 +28,7 @@
         </div>
         
         <div class="logo" id="logo">
-            <img src="images/jkg-big_logo-inverted-dropshadow.png" alt="Jedi Knight Galaxies" align="center">
+            <img src="images/jkg-big_logo-inverted-dropshadow.png" class="img-fluid" alt="Jedi Knight Galaxies" align="center">
         </div>
 
         <div class="centerdiv">
