Added loading indicator for text loaders.  Also improved text in FAQs.

--- a/download.html
+++ b/download.html
@@ -106,7 +106,7 @@
         <p>Then unzip the contents of the binaries zip downloaded and copy the contents (the folder that contains the
             readme) to the jkgalaxies directory in your GameData folder. Your folder structure should look like this:
         </p>
-        <pre id="directoryText"></pre>
+        <pre id="directoryText">[Loading...]</pre>
 
         <p>Now that you have created the jkgalaxies folder and placed the binaries inside, you will need to add the
             assets as well. Unzip the contents of the assets zip downloaded and copy the contents (everything inside the
