--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <div class="maindiv">
             <h1>News</h1>
-            <p id="manualNews"></p>
+            <p id="manualNews">[loading...]</p>
         </div>
 
         <div class="centerdiv">
