improved legal page

--- a/legal.html
+++ b/legal.html
@@ -37,7 +37,7 @@
 
         <p><Strong>Explanation</Strong></p>
         <p>
-            This page is used to inform website visitors regarding our policies with the collection, use, and disclosure of
+            This page is provided to inform website visitors regarding our policies with the collection, use, and disclosure of
             personal information if anyone decided to use our service. It also provides an explanation for the site's terms of
             use and the responsibilities of those who use it or the software provided by the Jedi Knight Galaxies (referred to
             as JKG or JKG team or JKG Devs or we/our).
