--- a/about.html
+++ b/about.html
@@ -139,7 +139,7 @@
         <div class="maindiv">
             <h2>What time period is JKG set in?</h2>
             <p>
-                JKG is set in the time after Episode 3 and before Episode 6 at a currently vague date. Due to the presence of character models from base JKA it fits in around Episode 5 however the goal is to take place in and around the Dark Forces timeline, before Episode IV: A New Hope.  JKG has its own canon to give ourselves creative freedom, but generally anything that occured in the Prequel Trilogy or Sequel Trilogy movies is considered canon, other material official Disney canon, extended universe, or otherwise may or may not be included.
+                JKG is set in the time after Episode 3 and before Episode 6 at a currently vague date. Due to the presence of character models from base JKA it fits in around Episode 5 however the goal is to take place in and around the Dark Forces timeline, before Episode IV: A New Hope.  JKG has its own canon to give ourselves creative freedom, but generally anything that occured in the Prequel Trilogy or Original Trilogy movies (1-6) is considered canon, other material official Disney canon, extended universe, or otherwise may or may not be included.
             </p>
         </div>
 
