adding async fix

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             shard="https://disweb.deploys.io"
             
             ></widgetbot>
-        <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>  
+        <script async defer src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>  
         </div>
 
 
