--- a/legal.html
+++ b/legal.html
@@ -152,7 +152,7 @@
             The reason
             is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use
             the
-            information for any other purpose. We consider them to be trustworthy and have chosen to use them based on
+            information for any other purpose. We consider them to be reliable and have chosen to use them based on
             their
             reputation, usability and commitment to privacy and security.
         </p>
@@ -164,17 +164,20 @@
                 and <a href="https://widgetbot.io/legal/privacy-policy/">privacy policy here</a>.</li>
                 <li>You can view Discord's <a href="https://discordapp.com/terms">terms of use here</a> and their <a
                         href="https://discordapp.com/privacy">privacy policy here</a>.</li>
-                <li>You can also view Github's <a
-                        href="https://help.github.com/en/articles/github-terms-of-service">terms of
+                <li>You can also view Github's <a href="https://help.github.com/en/articles/github-terms-of-service">terms of
                         use here</a> and
                     their <a href="https://help.github.com/en/articles/github-privacy-statement"> privacy policy
                         here</a>.</li>
                 <li>JKHub Forum's are also integrated into the site, you can view their <a href="">terms of use here</a>
                     and
                     their <a href="">privacy policy here</a>.</li>
+                <li>Images on the site are often hosted through imgur.com, be aware of their <a href="https://imgur.com/tos">
+                        terms of service</a> and their <a href="https://imgur.com/privacy">privacy policy</a>.</li>
                 <li>Youtube videos may also be integrated into the site from time to time. Be aware of their <a
                         href="https://www.youtube.com/t/terms">terms of use</a>
-                    and <a href="https://policies.google.com/privacy">privacy policy</a>.</li>
+                    and <a href="https://policies.google.com/privacy">privacy policy</a>. Keep in mind they
+                    are the most likely to try to track your activities and use advertisements out of any service
+                    we use on the site. We recommend using an adblocker if their tracking attempts bother you.</li>
             </ul>
         </p>
 
