--- a/legal.html
+++ b/legal.html
@@ -19,7 +19,7 @@
 
 <body class="LegalPage">
     <div id="navbar">
-        <img src="images/jkg-big_logo-inverted-dropshadow.png" class="img-fluid" alt="Jedi Knight Galaxies" align="right">
+        <img id="navbarLogoImg" src="images/jkg-big_logo-inverted-dropshadow.png" class="img-fluid" alt="Jedi Knight Galaxies" align="right">
         <a href="index.html">Home</a>
         <a href="download.html">Download</a>
         <a href="about.html">About</a>
