--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
         <h1>About</h1>
 
         <div class="centerdiv"><!--Carousel Wrapper-->
-            <div id="video-carousel" class="carousel slide carousel-fade" data-ride="carousel">
+            <div id="video-carousel" class="carousel slide carousel-fade" data-ride="carousel" data-interval="4000">
                     <!--Slides-->
                     <div class="carousel-inner">
                         <div class="carousel-item active">
@@ -55,7 +55,7 @@
                             <video class="video-fluid" autoplay loop muted>
                                 <source src="https://mdbootstrap.com/img/video/forest.mp4" type="video/mp4" />
                             </video>
-                            <div class="carousel-caption d-none d-md-block">
+                            <div class="carousel-caption d-none d-md-block">                              
                                 <h4>Endor</h4>
                                 <p>The 2nd Death Star is being constructed at this installation.</p>
                             </div>
