Fixed first page load download failure (OSName was being altered, without being saved and restored by drawTable() function)

--- a/download.html
+++ b/download.html
@@ -148,10 +148,10 @@
 
 
         <h2>Primary Releases</h2>
-        <a id="downloadBinBtnSm" href="#alternatives" class="binBtnDownloadSm"
+        <a id="downloadBinBtnSm" href="#tablePrimaryDownload" class="binBtnDownloadSm"
             title="Binaries required for play.">Binaries</a> &nbsp;<img src="images/plus.png" alt="+" height="16"
             width="16" title="You need both binaries and assets to play.">
-        &nbsp; <a id="downloadAssetBtnSm" href="#alternatives" class="assetBtnDownloadSm"
+        &nbsp; <a id="downloadAssetBtnSm" href="#tablePrimaryDownload" class="assetBtnDownloadSm"
             title="Assets required for play.">Assets</a>
         <p>
             <strong><a href="#" class="patchnotes" title="View developer notes about the latest release.">Patch Notes</a></strong><br>
@@ -282,10 +282,10 @@
 
         <div class="centerdiv" id="testdiv">
             <h2>Test Releases</h2>
-            <a id="downloadBinBtnTestSm" href="#alternatives" class="binBtnDownloadSm"
+            <a id="downloadBinBtnTestSm" href="#tableTestDownload" class="binBtnDownloadSm"
                 title="Binaries required for play.">Binaries</a> &nbsp;<img src="images/plus.png" alt="+" height="16"
                 width="16" title="You need both binaries and assets to play.">
-            &nbsp; <a id="downloadAssetBtnTestSm" href="#alternatives" class="assetBtnDownloadSm"
+            &nbsp; <a id="downloadAssetBtnTestSm" href="#tableTestDownload" class="assetBtnDownloadSm"
                 title="Assets required for play.">Assets</a>
             <p>
                 <strong><a href="#" class="test-patchnotes" title="View developer notes about the latest release.">Patch Notes</a></strong><br>
