added improved hash functionality (still needs to manually calculated on an update, is missing release hashes due to no release build)

--- a/download.html
+++ b/download.html
@@ -216,10 +216,10 @@
                 </td>
                 <td>
                     <a
-                        href="https://github.com/JKGDevs/JediKnightGalaxies/releases/download/Version1.3.18/jkgalaxies_v1.3.18_win.zip">Github.com</a>
+                        href="#">Github.com</a>
                 </td>
                 <td>
-                    <a href="https://uvu.box.com/shared/static/gqppzzcqj8bwwz3989sy7w28lj9c0a6f.zip">Box.com</a>
+                    <a href="#">Box.com</a>
                 </td>
             </tr>
             <tr>
