--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             channel="152169339208990721"
             width="480"
             height="350"
-            shard="https://disweb.deploys.io"
+            shard="https://disweb.dashflo.net"
             
             ></widgetbot>
         <script async defer src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>  
