Updating instructions and other texts

--- a/download.html
+++ b/download.html
@@ -100,11 +100,14 @@
         <p>After ensuring Jedi Academy is installed, and downloading the binaries and assets for your operating system
             you are ready to install. These instructions are also available in the readme provided with each release.
         </p>
-        <p>First, create a directory named jkgalaxies in your Jedi Academy install's GameData folder. The GameData
+        <p>First, navigate to your Jedi Academy install's GameData folder. The GameData
             folder is typically in the following location if you have Steam: 'SteamLibrary\steamapps\common\Jedi
             Academy\GameData'. Other types of installs will have a similar location. </p>
-        <p>Then unzip the contents of the binaries zip downloaded and copy the contents (the folder that contains the
-            readme) to the jkgalaxies directory in your GameData folder. Your folder structure should look like this:
+        <p>Then from the downoaded zip binary, drag and drop the jkgalaxies directory (the one the readme is alongside) into
+            Jedi Academy's GameData folder.
+            If you have a previous installation of JKG, just replace the jkgalaxies directory with the one in the zip (if you
+            have a really old version of JKG, you'll likely want to just install from scratch). Your directory structure should
+            look like this when installed:
         </p>
         <pre id="directoryText">[Loading...]</pre>
 
