Added a new mirror and better organized mirrors on the primary download.  Also added flate's server mirror.

--- a/legal.html
+++ b/legal.html
@@ -21,9 +21,10 @@
     <div id="navbar">
         <img id="navbarLogoImg" src="images/jkg-big_logo-inverted-dropshadow.png" class="img-fluid" alt="Jedi Knight Galaxies" align="right">
         <a href="index.html">Home</a>
-        <a href="download.html">Download</a>
-        <a href="about.html">About</a>
-        <a href="https://jkhub.org/forum/117-jedi-knight-galaxies/">Forum</a>
+        <a href="download.html" title="Get the game!">Download</a>
+        <a href="about.html" title="Learn more about the game.">About</a>
+        <a href="https://jk2t.ddns.net/serverlists/list.php?protocol=27&gamename=1&version=1" title="Check server stats, provided by jk2t.ddns.net">Servers</a>
+        <a href="https://jkhub.org/forum/117-jedi-knight-galaxies/" title="Hosted by JKHub.org.">Forum</a>
     </div>
     
     <div class="logo" id="logo">
