--- a/about.html
+++ b/about.html
@@ -26,9 +26,10 @@
         <div id="navbar">
             <img id="navbarLogoImg" src="images/jkg-big_logo-inverted-dropshadow.png" class="img-fluid" alt="Jedi Knight Galaxies" align="right">
             <a href="index.html">Home</a>
-            <a href="download.html">Download</a>
-            <a href="about.html">About</a>
-            <a href="https://jkhub.org/forum/117-jedi-knight-galaxies/">Forum</a>
+            <a href="download.html" title="Get the game!">Download</a>
+            <a href="about.html" title="Learn more about the game.">About</a>
+            <a href="https://jk2t.ddns.net/serverlists/list.php?protocol=27&gamename=1&version=1" title="Check server stats, provided by jk2t.ddns.net">Servers</a>
+            <a href="https://jkhub.org/forum/117-jedi-knight-galaxies/" title="Hosted by JKHub.org.">Forum</a>
         </div>
         
         <div class="logo" id="logo">
@@ -179,6 +180,9 @@
             <p>
                 Despite how great we think JKG is, we currently have a small, but broad following from many different regions in the world and it can sometimes be hard to find others to play with at the same time.  That said, the developers often schedule community scrimmage match days to test out new features for upcoming releases or just to play for fun.  These are announced on the <a href="https://jkhub.org/forum/119-jkgalaxies-news/">Forums</a> and in the <a href="https://discord.gg/YuG8Zks">Discord</a> before they happen so you can set some time aside to play.<br><br>
                 Other community members are also usually happy to play whenever they are given a chance, so if you feel like scheduling a match yourself let people know on Discord you want to play a match and they will usually join you for a game if they're around.  Smoo is our official dev server administrator, and can usually help host a game server if one is not currently running.
+            </p>
+            <p>
+                You can also visit the <a href="https://jk2t.ddns.net/serverlists/list.php?protocol=27&gamename=1&version=1" title="Hosted by jk2t.ddns.net">server list</a> to view real-time information about the current number of players, number of servers, which map is currently loaded etc.
             </p>
         </div>
             
