--- a/download.html
+++ b/download.html
@@ -26,9 +26,10 @@
     <div id="navbar">
         <img id="navbarLogoImg" src="images/jkg-big_logo-inverted-dropshadow.png" class="img-fluid" alt="Jedi Knight Galaxies" align="right">
         <a href="index.html">Home</a>
-        <a href="download.html">Download</a>
-        <a href="about.html">About</a>
-        <a href="https://jkhub.org/forum/117-jedi-knight-galaxies/">Forum</a>
+        <a href="download.html" title="Get the game!">Download</a>
+        <a href="about.html" title="Learn more about the game.">About</a>
+        <a href="https://jk2t.ddns.net/serverlists/list.php?protocol=27&gamename=1&version=1" title="Check server stats, provided by jk2t.ddns.net">Servers</a>
+        <a href="https://jkhub.org/forum/117-jedi-knight-galaxies/" title="Hosted by JKHub.org.">Forum</a>
     </div>
     
     <div class="logo" id="logo">
@@ -189,10 +190,13 @@
                         <p title="Release date.">Date</p>
                     </th>
                     <th>
-                        <p title="The primary download server.">Mirror #1</p>
+                        <p title="Click to download."><strong>Download Link</strong></p>
                     </th>
                     <th>
                         <p title="The secondary download server.">Mirror #2</p>
+                    </th>
+                    <th>
+                        <p title="The tertiary download server.">Mirror #3</p>
                     </th>
                 </tr>
             </thead>
@@ -245,7 +249,7 @@
                             <p title="Release date.">Date</p>
                         </th>
                         <th>
-                            <p title="Click to download.">Download Link</p>
+                            <p title="Click to download."><strong>Download Link</strong></p>
                         </th>
                     </tr>
                 </thead>
