Improved script loading (moved to bottom of page + async)

--- a/legal.html
+++ b/legal.html
@@ -9,12 +9,6 @@
     <link rel="icon" href="images/JKG_logo-inverted.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
-    
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script type="text/javascript">
-        window.jQuery || document.write('\x3Cscript type="text/javascript" src="scripts/jquery-3.4.1.min.js">\x3C/script>');
-    </script>
-    <script type="text/javascript" src="scripts/scripts.js"></script>
 </head>
 
 <body class="LegalPage">
@@ -273,6 +267,12 @@
         <p><a href="legal.html">Legal & Privacy Policy</a></p>
         <p>&copyJedi Knight Galaxies<script>document.write(new Date().getFullYear());</script></p>
     </div>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script type="text/javascript">
+        window.jQuery || document.write('\x3Cscript type="text/javascript" src="scripts/jquery-3.4.1.min.js">\x3C/script>');
+    </script>
+    <script async type="text/javascript" src="scripts/scripts.js"></script>
 </body>
 
 </html>
