--- a/404.html
+++ b/404.html
@@ -8,9 +8,6 @@
         <link rel="icon" href="https://www.jkgalaxies.net/images/JKG_logo-inverted.ico" type="image/x-icon">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="https://www.jkgalaxies.net/styles.css">
-
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-        <script type="text/javascript" src="https://www.jkgalaxies.net/scripts/scripts.js"></script>
     </head>
     <body class="404Page">
         <div id="navbar">
@@ -48,5 +45,8 @@
                 <p><a href="https://www.jkgalaxies.net/legal.html">Legal & Privacy Policy</a></p>
                 <p>&copyJedi Knight Galaxies <script>document.write(new Date().getFullYear());</script></p>
             </div>
-    </body>
 
+            <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+            <script type="text/javascript" src="https://www.jkgalaxies.net/scripts/scripts.js"></script>
+    </body>
+</html>
