minor page adjustments, and new bin checksums

--- a/download.html
+++ b/download.html
@@ -50,7 +50,7 @@
     </div>
     <br id="instructions"><br><br><br>
    
-    <h1 onclick="revealInstructionsSpoiler()">Installation Info</h1>
+    <h1 onclick="revealInstructionsSpoiler()" title="Click to show/hide installation instructions.">Installation Info</h1>
     <div class="maindiv" id="instructionBody">
         <h2>Installing JKG</h2>
         
