updates page to use latest master

--- a/download.html
+++ b/download.html
@@ -48,10 +48,12 @@
         <h3><a href="#alternatives">Alternative Downloads</a></h3>
         <h3><a href="#instructions">Instructions for Installation</a></h3>
     </div>
-
     <br id="instructions"><br><br><br>
-    <div class="maindiv">
-        <h1>Installation Info</h1>
+   
+    <h1 onclick="revealInstructionsSpoiler()" title="Click to show/hide installation instructions.">Installation Info</h1>
+    <div class="maindiv" id="instructionBody">
+        <h2>Installing JKG</h2>
+        
         <p>Watch a <a href="https://www.youtube.com/watch?v=D-q9AJiFWPc" title="Install JKG Tutorial Video">tutorial
                 video</a> to learn how to install or read the instructions below.</p><br>
 
