Fixed tables on download page so they are properly centered

--- a/download.html
+++ b/download.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="Description" content="Jedi Knight Galaxies downloads.">
     <meta name="Copyright" content="Jedi Knight Galaxies Team">
-    <meta name="Keywords" content="JKG, Jedi Knight Galaxies, jkagalaxies, jkgalaxies, jedi knight, game, star wars, star wars online, star wars multiplayer, star wars multiplayer game, star wars game, star wars mod, download JKG, download">
+    <meta name="Keywords" content="JKG, Jedi Knight Galaxies, jkagalaxies, jkgalaxies, jedi knight, game, star wars, star wars online, star wars multiplayer, star wars multiplayer game, star wars game, jedi academy, star wars mod, download JKG, download">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="Language" content="English">
 
@@ -158,7 +158,9 @@
             <span id="download-count">Total Downloads: </span>
         </p>
 
-        <div class="centerdiv">
+        <div class="centerdivtables">
+        <div class="row justify-content-center">
+        <div class="col-auto">
         <div class="table-responsive-md">
         <table class="table table-dark" id="tablePrimaryDownload">
             <thead>
@@ -201,6 +203,8 @@
         </table>
         </div>
         </div>
+        </div>
+        </div>
         <br><br>
 
         <div class="centerdiv" id="testdiv">
@@ -216,7 +220,9 @@
                 <span id="test-download-count">Total Downloads: </span>
             </p>
 
-
+            <div class="centerdivtables">
+            <div class="row justify-content-center">
+            <div class="col-auto">
             <div class="table-responsive-md">
             <table class="table table-dark" id="tableTestDownload" align="center">
                 <thead>
@@ -251,6 +257,9 @@
                 <tbody>
                 </tbody>
             </table>
+            </div>
+            </div>
+            </div>
             </div>
         </div>
 
