Added actual JKG video footage to about page (large commit has video files)

--- a/about.html
+++ b/about.html
@@ -36,30 +36,30 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <video class="video-fluid" autoplay loop muted>
-                                <source src="https://mdbootstrap.com/img/video/Tropical.mp4" type="video/mp4" />
+                                <source src="videos/brief.mp4" type="video/mp4" />
                             </video>
                             <div class="carousel-caption d-none d-md-block">
-                                <h4>Scarif</h4>
-                                <p>Location of the Empire's data records and shipyard for secret projects.</p>
+                                <h4>A Galaxy at War</h4>
+                                <p>Imperial forces struggle to crush rebel fractions spreading war and discord across known space.</p>
                             </div>
                         </div>
                         
                         <div class="carousel-item">
                             <video class="video-fluid" autoplay loop muted>
-                                <source src="https://mdbootstrap.com/img/video/forest.mp4" type="video/mp4" />
+                                <source src="videos/tatooine_brief.mp4" type="video/mp4" />
                             </video>
                             <div class="carousel-caption d-none d-md-block">                              
-                                <h4>Endor</h4>
-                                <p>The 2nd Death Star is being constructed at this installation.</p>
+                                <h4>Tatooine</h4>
+                                <p>The wild west of the galaxy and home of many moisture farmers, smugglers and bounty hunters.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <video class="video-fluid" autoplay loop muted>
-                                <source src="https://mdbootstrap.com/img/video/Agua-natural.mp4" type="video/mp4" />
+                                <source src="videos/coruscant_brief.mp4" type="video/mp4" />
                             </video>
                             <div class="carousel-caption d-none d-md-block">
-                                <h4>Dantooine</h4>
-                                <p>A peaveful agricultural world, previously used by the Jedi Council for Jedi Headquarters.</p>
+                                <h4>Coruscant</h4>
+                                <p>The Imperial Capital - a planet-wide metropolis infested with gangs and Imperial troops.</p>
                             </div>
                         </div>
                     </div>
