--- a/404.html
+++ b/404.html
@@ -12,9 +12,9 @@
     <body class="404Page">
         <div id="navbar">
             <img id="navbarLogoImg" src="images/jkg-big_logo-inverted-dropshadow.png" class="img-fluid" alt="Jedi Knight Galaxies" align="right">
-            <a href="index.html">Home</a>
-            <a href="download.html" title="Get the game!">Download</a>
-            <a href="about.html" title="Learn more about the game.">About</a>
+            <a href="https://www.jkgalaxies.net/index.html">Home</a>
+            <a href="https://www.jkgalaxies.net/download.html" title="Get the game!">Download</a>
+            <a href="https://www.jkgalaxies.net/about.html" title="Learn more about the game.">About</a>
             <a href="https://jk2t.ddns.net/serverlists/list.php?protocol=27&gamename=1&version=1" title="Check server stats, provided by jk2t.ddns.net">Servers</a>
             <a href="https://jkhub.org/forum/117-jedi-knight-galaxies/" title="Hosted by JKHub.org.">Forum</a>
         </div>
