fixed label changes and started a new image gallery fix

--- a/faq.html
+++ b/faq.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <title>About JKG</title>
-        <meta charset="utf-8">
+        <title>FAQ for JKG</title>
         <meta charset="utf-8">
         <meta name="Description" content="Jedi Knight Galaxies, a mod for Jedi Academy.">
         <meta name="Copyright" content="Jedi Knight Galaxies Team">
