added new images and more faq questions, fixed the image carousel and added controls to the video

--- a/faq.html
+++ b/faq.html
@@ -62,6 +62,16 @@
         </div>
 
         <div class="maindiv">
+        <h2>Which version should I install?</h2>
+            <p>Most people will want to install the test release located at the bottom of the page as this will have the latest bug fixes and newest features and is updated the most often.  Just keep in mind this is also usually the buggiest and most likely to crash.  If you want a slightly more stable client, get the primary release instead.  Most servers run the latest test release.</p>
+        </div>
+
+        <div class="maindiv">
+        <h2>Do I need the map packs installed?</h2>
+            <p>Most servers run additional maps other than the default bespin map that comes with the client install.  If you want to play on any of these servers you'll need the extra maps.  You can technically play the game without the extra maps, but this usually isn't as fun.</p>
+        </div>
+
+        <div class="maindiv">
             <h2>Is this a single player or multiplayer game?</h2>
             <p>
                 Multiplayer.  JKG will incorporate both solo and cooperative gameplay elements within a multiplayer environment as development proceeds; however, the current version of gameplay focuses on cooperative competitive multiplayer aspect.  See <a href="#phases" title="Phase development.">below</a> for a more detailed explanation of the game's vision and roadmap.
