--- a/about.html
+++ b/about.html
@@ -33,9 +33,9 @@
             <div id="video-carousel" class="carousel slide carousel-fade" data-ride="carousel" data-interval="8000">
                 <!--Indicators-->
                 <ol class="carousel-indicators">
-                    <li data-target="#video-carousel-example" data-slide-to="0" class="active"></li>
-                    <li data-target="#video-carousel-example" data-slide-to="1"></li>
-                    <li data-target="#video-carousel-example" data-slide-to="2"></li>
+                    <li data-target="#video-carousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#video-carousel" data-slide-to="1"></li>
+                    <li data-target="#video-carousel" data-slide-to="2"></li>
                 </ol>
                 <!--/.Indicators-->
                     <!--Slides-->
