--- a/index.html
+++ b/index.html
@@ -55,17 +55,11 @@
                 height="350"
                 shard="https://disweb.dashflo.net"
             ></widgetbot>
+
+            <!-- //this is the backup iframe if too many people complain about no javascript - it doesn't work as well so I don't want to use it if we can avoid it
+            <iframe src="https://disweb.dashflo.net/channels/152168677578506240/152169339208990721" height="480" width="350"></iframe>
+            -->
         </div>
-
-
-        <!--<div>
-            <br><br>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/vJnh-hNendI" 
-                frameborder="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; 
-                picture-in-picture" allowfullscreen alt="Gameplay Video">
-            </iframe>
-            <br<br>
-        </div>-->
 
         <br>
         <div class="copyright">
