updated tos for clarity

--- a/legal.html
+++ b/legal.html
@@ -27,7 +27,7 @@
 
     <h1>Terms of Use <br>&<br> Privacy Policy</h1>
 
-    <h3>Last Update: 10/4/2019</h3>
+    <h3>Last Update: 01/27/2020</h3>
     <div class="maindiv">
 
         <p><Strong>Explanation</Strong></p>
@@ -225,8 +225,10 @@
         <p>
             At this time the service does not make use of cookie and similar technologies (like HTML5 localStorage)
             technology,
-            except when done by a third party (such as an embedded youtube video). Review their privacy policies to make
-            yourself aware of how they use cookies and other technologies.
+            except when done by a third party (such as an embedded youtube video or the embedded Discord news feed). Review
+            their privacy policies to make
+            yourself aware of how they use cookies and other technologies. See above for links to each services policies and
+            terms.
         </p>
 
         <p><strong>Indemification</strong></p>
