switching to beta widgetbot.io for better uptime

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 channel="152169339208990721"
                 width="480"
                 height="350"
-                shard="https://disweb.dashflo.net"
+                shard="https://e.widgetbot.io"
             ></widgetbot>
 
             <!-- //this is the backup iframe if too many people complain about no javascript - it doesn't work as well so I don't want to use it if we can avoid it
