forgot to fix comment

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             ></widgetbot>
 
             <!-- //this is the backup iframe if too many people complain about no javascript - it doesn't work as well so I don't want to use it if we can avoid it
-            <iframe src="https://disweb.dashflo.net/channels/152168677578506240/152169339208990721" height="480" width="350"></iframe>
+            <iframe src="https://e.widgetbot.io/channels/152168677578506240/152169339208990721" height="480" width="350"></iframe>
             -->
         </div>
 
