--- a/about.html
+++ b/about.html
@@ -94,6 +94,7 @@
             <h3>Questions?  Check our <a href="faq.html" title="Query: Is there something you want to know?">FAQ</a>.</h3>
         </div>
 
+<a href="download.html" class="bigDownloadHoverBtn" alt="Get JKG!" title="Get JKG!">⭳</a>
 
 
         <div class="centerdiv">
