fix unicode on non-windows (use more common unicode), check if windows and if so replace with better looking symbol

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             -->
         </div>
 		
-		<a id="downloadHoverButton" href="download.html" class="bigDownloadHoverBtn" alt="Get JKG!" title="Get JKG!">⭳</a>
+		<a id="downloadHoverButton" href="download.html" class="bigDownloadHoverBtn" alt="Get JKG!" title="Get JKG!">⬇</a>
 
         <br>
         <div class="copyright">
