Jabba forgive me for I have sinned, webm vid versions have come, rip your bandwidth

--- a/about.html
+++ b/about.html
@@ -43,6 +43,8 @@
                         <div class="carousel-item active">
                             <video class="video-fluid" autoplay loop muted>
                                 <source src="videos/brief.mp4" type="video/mp4" />
+                                <source src="videos/brief.webm" type="video/webm"/>
+                                Your browser does not support the video tag.
                             </video>
                             <div class="carousel-caption d-none d-md-block">
                                 <h4>A Galaxy at War</h4>
@@ -53,6 +55,8 @@
                         <div class="carousel-item">
                             <video class="video-fluid" autoplay loop muted>
                                 <source src="videos/coruscant_brief.mp4" type="video/mp4" />
+                                <source src="videos/coruscant_brief.webm" type="video/webm"/>
+                                Your browser does not support the video tag.
                             </video>
                             <div class="carousel-caption d-none d-md-block">
                                 <h4>Coruscant</h4>
@@ -63,6 +67,8 @@
                         <div class="carousel-item">
                             <video class="video-fluid" autoplay loop muted>
                                 <source src="videos/tatooine_brief.mp4" type="video/mp4" />
+                                <source src="videos/tatooine_brief.webm" type="video/webm"/>
+                                Your browser does not support the video tag.
                             </video>
                             <div class="carousel-caption d-none d-md-block">                              
                                 <h4>Tatooine</h4>
