Fixing special download unicode to only show on Win 10, previous versions of Windows didn't support.  Also replaced a screenshot.

--- a/about.html
+++ b/about.html
@@ -206,9 +206,9 @@
                     </div>
               
                     <div class="col-md-3 mb-3">
-                        <a href="https://i.imgur.com/z6BF5pi.jpg" target="_blank"><div class="card">
-                            <img class="img-fluid" src="https://i.imgur.com/z6BF5pi.jpg"
-                              alt="Sneak" title="Thermal Detonators are not to be underestimated.">
+                        <a href="https://i.imgur.com/17ic2ed.png" target="_blank"><div class="card">
+                            <img class="img-fluid" src="https://i.imgur.com/17ic2ed.png"
+                              alt="Sneak" title="There's nothing like explosives and heavy automatic fire to keep a hallway clear.">
                           </div></a>
                     </div>
               
