--- a/faq.html
+++ b/faq.html
@@ -44,7 +44,7 @@
         </div>
         
         <div class="maindiv">
-        <h2>Who develops JKG?</h2>
+        <h2>Who develops Jedi Knight Galaxies?</h2>
             <p>Jedi Knight Galaxies is a much loved hobby project created by developers who work on it in their freetime, with contributions from the community and volunteers.  The current team and significant contributors can be found <a href="./contributors.html">here.</a></p>
         </div>
         
@@ -124,6 +124,24 @@
             </p>
         </div>
         <br>
+
+        <div class="maindiv">
+            <h2>Do you have a roadmap or list of planned features somewhere?</h2>
+            <p>JKG's development is changing all the time, but you can find out our plans here:<br>
+            <ul>
+                <li><a href="https://jkhub.org/forums/topic/8534-project-roadmap/" title="General Roadmap on JKHub Forums.">General Roadmap</a></li>
+                <li>Github Milestones for Phase 1:  <a href="https://github.com/JKGDevs/JediKnightGalaxies/milestone/4" title="Milestone 3 goals.">Milestone 3</a>, <a href="https://github.com/JKGDevs/JediKnightGalaxies/milestone/6" title="Milestone 4 goals.">Milestone 4</a>, and <a href="https://github.com/JKGDevs/JediKnightGalaxies/milestone/9" title="Milestone 5 goals.">Milestone 5.</a></li>
+                <li><a href="https://jkhub.org/forums/topic/6876-concept-threads/" title="Masterlist of concept threads in which developers discuss specific features in detail.">Concept Threads.</a></li>
+            </ul>
+            </p>
+        </div>
+
+        <div class="maindiv">
+            <h2>How can I help contribute?</h2>
+            <p>We need your help!  There are many ways to help contribute, the first is by beta testing the mod and giving us your feedback on the <a href="https://jkhub.org/forums/forum/117-jedi-knight-galaxies/">Forums</a> or <a href="https://discord.gg/YuG8Zks">Discord</a>.  Sharing JKG with your friends also helps make it better, the more the merrier!</p>
+            <p>If you know how to code, map, model, animate, or do other types of game dev things you can also try modding JKG first to get a hang of how things work.  Try creating a new weapon for example, then jump on the Discord and show off what you've done!  If you feel you have time and talent to help, you could also join the developers and help us make the game even better, just let us know what you're interested in doing and show off some of your work and we'll be happy to direct you further.  One of the easiest ways to start learning how the game works is to look inside zz_JKG_Assets5.pk3 -> ext_data where most of the game's settings and data are stored as json-like files that are easy to edit and read.  You can find a guide to ext_data <a href="https://github.com/JKGDevs/JediKnightGalaxies/blob/develop/Extended%20Data.txt">here</a>.</p>
+            <p>If you're more of a coder, you could also try compiling the game yourself following the directions on the <a href="https://github.com/JKGDevs/JediKnightGalaxies/tree/develop#build-guide">Github Readme</a> and once you've got that down, maybe take a look at the <a href="https://github.com/JKGDevs/JediKnightGalaxies/issues">issues list</a> and see if you can help us fix one of them.  JKG is written primarily in C and C++, and uses LUA for scripting.</p>
+        </div>
 
         <div class="maindiv">
             <h2>What platforms will JKG be released on?</h2>
