fix grammar on download.html

--- a/download.html
+++ b/download.html
@@ -76,7 +76,7 @@
         </p>
 
         <p><strong>Do I need the map packs?</strong><br>
-            The default game comes with only one map, it is highly recommend you install the map packs as well, however
+            The default game comes with only one map, it is highly recommended you install the map packs as well, however
             you can still technically play with only one map. Most JKG servers use several maps and you will need them
             installed to play on these servers.
         </p>
