another newsfeed update and added link to discord invite on index page

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
 
         <div class="centerdiv">
-            <h2>Discord Announcements</h2>
+            <h2><a href="https://discord.gg/YuG8Zks" title="Click to join the JKG Discord community.">Discord Announcements</a></h2>
 
             <widgetbot
                 server="152168677578506240"
