Added map pack #2 to downloads and fixed jk2t links and added jk2t beta/test releases to the test release table

--- a/download.html
+++ b/download.html
@@ -42,8 +42,11 @@
             <span class="release-info"></span>
         </p>
         <br><br>
-        <a id="downloadMapOneBtn" href="https://jkhub.org/files/file/2652-jedi-knight-galaxies-map-bundle-1/"
-            class="map1BtnDownload" title="Optional maps, required to play on most servers.">Map Bundle #1</a>
+        <div><a id="downloadMapOneBtn" href="https://jkhub.org/files/file/2652-jedi-knight-galaxies-map-bundle-1/"
+            class="map1BtnDownload" title="Optional maps, required to play on most servers.">Map Bundle #1</a></div>
+            <br>
+        <div><a id="downloadMapTwoBtn" href="https://uvu.box.com/shared/static/kb0wvyqtz0sarzs0kn1c8h03wrpjgb7c.zip" 
+            class="map1BtnDownload" title="Optional maps, required to play on most servers.">Map Bundle #2</a></div>
         <br><br><br>
         <h3><a href="#alternatives">Alternative Downloads</a></h3>
         <h3><a href="#instructions">Instructions for Installation</a></h3>
@@ -251,6 +254,9 @@
                         </th>
                         <th>
                             <p title="Click to download."><strong>Download Link</strong></p>
+                        </th>
+                        <th>
+                            <p title="The alternative download server.">Mirror #3</p>
                         </th>
                     </tr>
                 </thead>
