improved wording on faq and download.html also added fallback font that looks better

--- a/download.html
+++ b/download.html
@@ -67,6 +67,13 @@
             to play.
         </p>
 
+        <p><strong>I notice there is a primary release and a test release, which install do I want?</strong><br>
+            Most players will want to install the <a href="#testdiv">test release located at the bottom of the page</a> 
+            as this will have the latest bug fixes and newest features and is updated the most often.  Just keep in mind 
+            this is also usually the buggiest and most likely to crash.  If you want a slightly more stable client, get 
+            the primary release instead.  Most servers run the latest test release.
+        </p>
+
         <p><strong>Is Jedi Academy required to play?</strong><br>
             <a href="about.html#FAQJA2Play" title="Click link for more info.">Jedi Academy</a> must be installed first
             before you can play.
@@ -81,7 +88,8 @@
         <p><strong>Do I need the map packs?</strong><br>
             The default game comes with only one map, it is highly recommended you install the map packs as well, however
             you can still technically play with only one map. Most JKG servers use several maps and you will need them
-            installed to play on these servers.
+            installed to play on these servers.  Additional maps also provide a much richer experience, and you'll make
+            our level designers sad if you don't try them all out!
         </p>
 
         <p><strong>My antivirus says JKG is a virus. Is it?</strong><br>
@@ -140,7 +148,7 @@
             Need a download for a different operating system or looking for a different download? 
             Two types of releases are available: 
             <ul>
-                <li><strong>Primary</strong>, the most recent, stable release.</li> 
+                <li><strong>Primary</strong>, the long-term, stable release.</li> 
                 <li><strong>Test</strong>, the latest and greatest, beta release.</li>
             </ul>
             Note: You will need both binary and asset to play.
