--- a/faq.html
+++ b/faq.html
@@ -63,7 +63,7 @@
 
         <div class="maindiv">
         <h2>Which version should I install?</h2>
-            <p>Most people will want to install the test release located at the bottom of the page as this will have the latest bug fixes and newest features and is updated the most often.  Just keep in mind this is also usually the buggiest and most likely to crash.  If you want a slightly more stable client, get the primary release instead.  Most servers run the latest test release.</p>
+            <p>Most people will want to install the <a href="https://www.jkgalaxies.net/download.html#testdiv">test release located at the bottom of the page</a> as this will have the latest bug fixes and newest features and is updated the most often.  Just keep in mind this is also usually the buggiest and most likely to crash.  If you want a slightly more stable client, get the primary release instead.  Most servers run the latest test release.</p>
         </div>
 
         <div class="maindiv">
