--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
     </head>
     <body class="404Page">
         <div id="navbar">
-            <img id="navbarLogoImg" src="images/jkg-big_logo-inverted-dropshadow.png" class="img-fluid" alt="Jedi Knight Galaxies" align="right">
+            <img id="navbarLogoImg" src="https://wwww.jkgalaxies.net/images/jkg_logo-inverted-dropshadow.png" class="img-fluid" alt="Jedi Knight Galaxies" align="right">
             <a href="https://www.jkgalaxies.net/index.html">Home</a>
             <a href="https://www.jkgalaxies.net/download.html" title="Get the game!">Download</a>
             <a href="https://www.jkgalaxies.net/about.html" title="Learn more about the game.">About</a>
