--- a/legal.html
+++ b/legal.html
@@ -27,7 +27,7 @@
 
     <h1>Terms of Use <br>&<br> Privacy Policy</h1>
 
-    <h3>Last Update: 01/27/2020</h3>
+    <h3 title="MM/DD/YYYY">Last Update: 02/18/2020</h3>
     <div class="maindiv">
 
         <p><Strong>Explanation</Strong></p>
@@ -135,7 +135,7 @@
             don't use it for tracking you, nor are we interested in knowing what your online activities may be.
         </p>
 
-        <p><strong>3rd Party Services</strong></p>
+        <p id="thirdparty"><strong>3rd Party Services</strong></p>
         <p>We may employ third-party companies and individuals due to the following reasons:</p>
         <ul>
             <li>To facilitate our Service;</li>
@@ -223,13 +223,12 @@
 
         <p><strong>Cookies</strong></p>
         <p>
-            At this time the service does not make use of cookie and similar technologies (like HTML5 localStorage)
-            technology,
-            except when done by a third party (such as an embedded youtube video or the embedded Discord news feed). Review
-            their privacy policies to make
-            yourself aware of how they use cookies and other technologies. See above for links to each services policies and
-            terms.
+            At this time the service does not make use of cookie and similar technologies (like HTML5 localStorage) technology,
+            except when done by a third party (such as an embedded youtube video or the embedded Discord news feed).
+            Review their privacy policies to make yourself aware of how they use cookies and other technologies. <a
+                href="#thirdparty">See above</a> for links to each service's policies and terms.
         </p>
+
 
         <p><strong>Indemification</strong></p>
         <p>
