--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
 
               
                 <!--Slides-->
-                <div class="carousel-inner" role="listbox">
+                <div class="carousel-inner" role="listbox" id="image-inner-carousel">
               
                   <!--First slide-->
                   <div class="carousel-item active">
