adding google searchconsole vertification meta tag

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <meta name="Keywords" content="JKG, Jedi Knight Galaxies, jkagalaxies, jkgalaxies, jedi knight, game, star wars, star wars online, star wars multiplayer, star wars multiplayer game, star wars game, star wars mod, Jedi Academy, jk3, JKA">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="Language" content="English">
+		<meta name="google-site-verification" content="4DOJbomq9y00AL8HF-t8-JMZ66JHltuDpvhGTChLak4" />
 
         <link rel="icon" href="images/JKG_logo-inverted.ico" type="image/x-icon">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
